examples/test/testpolicy19287.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19287
  namespace: namespace77
spec:
  podSelector:
    matchLabels:
      key16: value10
      key42: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value42
          key42: value24
      podSelector:
        matchLabels:
          key4: value28
          key28: value10
          key34: value39
